[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "openline-env"
version = "0.1.0"
description = "Environment integrity receipts for the OpenLine ecosystem"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["openline", "supply-chain", "receipts", "ai-safety", "agent-watchdog"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
